--- a/app/index.css
+++ b/app/index.css
@@ -244,3 +244,84 @@ body.bookmark-column-open #main-content {
     font-weight: 300;
     font-family: 'Arial', sans-serif;
 }
+
+/* ######################################################### Options */
+
+.redirect-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
+  .redirect-button:hover {
+    background-color: #0056b3;
+  }
+
+  /* Modal Styles */
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+    z-index: 1000;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .modal-content {
+    background: #fff;
+    border-radius: 8px;
+    width: 400px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+  }
+
+  .modal-content h2 {
+    margin-top: 0;
+  }
+
+  .modal-content label {
+    display: block;
+    margin: 15px 0 5px;
+    text-align: left;
+  }
+
+  .modal-content input[type="text"],
+  .modal-content input[type="file"] {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-bottom: 20px;
+  }
+
+  .modal-content .buttons {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .modal-content button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+
+  .modal-content .save {
+    background-color: #4caf50;
+    color: #fff;
+  }
+
+  .modal-content .cancel {
+    background-color: #f44336;
+    color: #fff;
+  }
